[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11"
numpy = ">=2.1.3"
openpyxl = ">=3.1.5"
pandas = ">=2.2.3"
plotly = ">=5.24.1"
streamlit = ">=1.40.1"

[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "streamlit>=1.40.1",
]
